# air-freshener-stm8

./: CMakeLists.txt  flash.sh  sdcc-stm8.yaml  st-link.cfg  stm8_toolchain.cmake
StdPeriph/: stm8_it.h
StdPeriph/STM8L15x-16x-05x/Libraries/STM8L15x_StdPeriph_Driver/: CMakeLists.txt
StdPeriph/STM8L15x-16x-05x/Libraries/STM8L15x_StdPeriph_Driver/inc/: stm8l15x.h
StdPeriph/STM8S/Libraries/STM8S_StdPeriph_Driver/: CMakeLists.txt  stm8s_conf.h
StdPeriph/STM8S/Libraries/STM8S_StdPeriph_Driver/src/: stm8s_uart1.c
src/: config.c  config.h  console_io.c  console_io.h  main.c  motor.c  motor.h  time.c  time.h
